[package]
name = "vendorman"
description = "vendoring tool for rust projects"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/tascord/vendman"
homepage = "https://github.com/tascord/vendman"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
dirs = "5.0.1"
git2 = "0.18.2"
serde = { version = "1.0.196", features = ["derive"] }
termimad = "0.29.1"
toml = "0.8.10"

[[bin]]
name = "vendman"
path = "src/main.rs"
